--- a/analyzers/.editorconfig
+++ b/analyzers/.editorconfig
@@ -41,6 +41,7 @@ dotnet_diagnostic.xUnit1038.severity = warning
 dotnet_diagnostic.xUnit1039.severity = warning
 dotnet_diagnostic.xUnit1040.severity = warning
 dotnet_diagnostic.xUnit1041.severity = warning
+dotnet_diagnostic.xUnit1042.severity = warning
 
 dotnet_diagnostic.xUnit2000.severity = warning
 dotnet_diagnostic.xUnit2001.severity = warning
