--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,10 +1,10 @@
 <Project>
 
   <PropertyGroup>
-    <XunitAnalyzersVersion>1.7.0-pre.22</XunitAnalyzersVersion>
-    <XunitV2Version>2.6.3-pre.5</XunitV2Version>
-    <XunitV3Version>0.1.1-pre.328</XunitV3Version>
-    <XunitRunnerVSVersion>2.5.5-pre.3</XunitRunnerVSVersion>
+    <XunitAnalyzersVersion>1.7.0</XunitAnalyzersVersion>
+    <XunitV2Version>2.6.3</XunitV2Version>
+    <XunitV3Version>0.1.1-pre.331</XunitV3Version>
+    <XunitRunnerVSVersion>2.5.5</XunitRunnerVSVersion>
   </PropertyGroup>
 
 </Project>
