--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,10 +1,10 @@
 <Project>
 
   <PropertyGroup>
-    <XunitAnalyzersVersion>1.8.0-pre.13</XunitAnalyzersVersion>
-    <XunitV2Version>2.6.3</XunitV2Version>
-    <XunitV3Version>0.1.1-pre.331</XunitV3Version>
-    <XunitRunnerVSVersion>2.5.5</XunitRunnerVSVersion>
+    <XunitAnalyzersVersion>1.8.0</XunitAnalyzersVersion>
+    <XunitV2Version>2.6.4</XunitV2Version>
+    <XunitV3Version>0.1.1-pre.334</XunitV3Version>
+    <XunitRunnerVSVersion>2.5.6</XunitRunnerVSVersion>
   </PropertyGroup>
 
 </Project>
