--- a/analyzers/v2-execution/v2-execution.csproj
+++ b/analyzers/v2-execution/v2-execution.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);XUNIT_V2;XUNIT_EXTENSIBILITY</DefineConstants>
