--- a/analyzers/.editorconfig
+++ b/analyzers/.editorconfig
@@ -1,4 +1,4 @@
-﻿[*.cs]
+[*.cs]
 dotnet_diagnostic.xUnit1000.severity = warning
 dotnet_diagnostic.xUnit1001.severity = warning
 dotnet_diagnostic.xUnit1002.severity = warning
@@ -75,8 +75,12 @@ dotnet_diagnostic.xUnit3001.severity = warning
 dotnet_diagnostic.CA1050.severity = none
 dotnet_diagnostic.CA2211.severity = none
 
+dotnet_diagnostic.CS8321.severity = none
+
+dotnet_diagnostic.IDE0039.severity = none
 dotnet_diagnostic.IDE0040.severity = none
 dotnet_diagnostic.IDE0051.severity = none
 dotnet_diagnostic.IDE0052.severity = none
 dotnet_diagnostic.IDE0060.severity = none
+dotnet_diagnostic.IDE0062.severity = none
 dotnet_diagnostic.IDE1006.severity = none
