--- a/analyzers/v2-full/v2-full.csproj
+++ b/analyzers/v2-full/v2-full.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="8.0.0" Condition=" '$(TargetFramework)' == 'net8.0' " />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
     <PackageReference Include="xunit" Version="$(XunitV2Version)" />
     <PackageReference Include="xunit.analyzers" Version="$(XunitAnalyzersVersion)" />
