--- a/analyzers/v3-full/v3-full.csproj
+++ b/analyzers/v3-full/v3-full.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="8.0.0" />
     <PackageReference Include="xunit.analyzers" Version="$(XunitAnalyzersVersion)" />
     <PackageReference Include="xunit.v3" Version="$(XunitV3Version)" />
   </ItemGroup>
