--- a/analyzers/v3-full/v3-full.csproj
+++ b/analyzers/v3-full/v3-full.csproj
@@ -4,6 +4,7 @@
     <DefineConstants>$(DefineConstants);XUNIT_V3;XUNIT_EXTENSIBILITY</DefineConstants>
     <LangVersion>12.0</LangVersion>
     <Nullable>enable</Nullable>
+    <OutputType>Exe</OutputType>
     <TargetFrameworks>net472;net8.0</TargetFrameworks>
   </PropertyGroup>
 
@@ -15,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="8.0.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="xunit.analyzers" Version="$(XunitAnalyzersVersion)" />
     <PackageReference Include="xunit.v3" Version="$(XunitV3Version)" />
   </ItemGroup>
