--- a/analyzers.vs2019/v3-full/v3-full.csproj
+++ b/analyzers.vs2019/v3-full/v3-full.csproj
@@ -7,15 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\analyzers\common\**\*.cs" />
-    <Compile Include="..\analyzers\v2-full\**\*.cs" Exclude="**\obj\**" />
+    <Compile Include="..\..\analyzers\common\**\*.cs" />
+    <Compile Include="..\..\analyzers\v3-full\**\*.cs" Exclude="**\obj\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="8.0.0" />
-    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
-    <PackageReference Include="xunit" Version="$(XunitV2Version)" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="xunit.analyzers" Version="$(XunitAnalyzersVersion)" />
+    <PackageReference Include="xunit.v3" Version="$(XunitV3Version)" />
   </ItemGroup>
 
 </Project>
