--- a/analyzers.vs2019/v2-full/v2-full.csproj
+++ b/analyzers.vs2019/v2-full/v2-full.csproj
@@ -40,6 +40,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="8.0.0" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
     <PackageReference Include="xunit" Version="$(XunitV2Version)" />
