--- a/console/v2x_net472_Sdk/v2x_net472_Sdk.csproj
+++ b/console/v2x_net472_Sdk/v2x_net472_Sdk.csproj
@@ -17,7 +17,8 @@
   </ItemGroup>
 
   <Target Name="Test" AfterTargets="Build">
-    <Exec Command="$(XunitConsolePath) &quot;$(TargetPath)&quot;" />
+    <Exec Command="$(XunitConsolePath) &quot;$(TargetPath)&quot;" Condition=" '$(OS)' == 'Windows_NT' "/>
+    <Exec Command="mono $(XunitConsolePath) &quot;$(TargetPath)&quot;" Condition=" '$(OS)' != 'Windows_NT' " />
   </Target>
 
 </Project>
