--- a/console/v3x_net60/v3x_net60.csproj
+++ b/console/v3x_net60/v3x_net60.csproj
@@ -21,7 +21,8 @@
   </ItemGroup>
 
   <Target Name="Test" AfterTargets="Build">
-    <Exec Command="$(XunitConsolePath) &quot;$(TargetPath)&quot;" />
+    <Exec Command="$(XunitConsolePath) &quot;$(TargetPath)&quot;" Condition=" '$(OS)' == 'Windows_NT' "/>
+    <Exec Command="mono $(XunitConsolePath) &quot;$(TargetPath)&quot;" Condition=" '$(OS)' != 'Windows_NT' " />
   </Target>
 
 </Project>
