--- a/test-explorer/MSTest_and_v2x/MSTest_and_v2x.csproj
+++ b/test-explorer/MSTest_and_v2x/MSTest_and_v2x.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.4.3" />
     <PackageReference Include="MSTest.TestFramework" Version="3.4.3" />
     <PackageReference Include="xunit" Version="$(XunitV2Version)" />
