--- a/test-explorer/v2x_net472_FSharp/v2x_net472_FSharp.fsproj
+++ b/test-explorer/v2x_net472_FSharp/v2x_net472_FSharp.fsproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="4.7.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)" />
     <PackageReference Update="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="xunit" Version="$(XunitV2Version)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitRunnerVSVersion)">
