--- a/test-explorer/v2x_net472_OldProject/v2x_net472_OldProject.csproj
+++ b/test-explorer/v2x_net472_OldProject/v2x_net472_OldProject.csproj
@@ -10,7 +10,6 @@
     <AssemblyName>v2x_net472_OldProject</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <GenerateProgramFile>false</GenerateProgramFile>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -34,6 +33,7 @@
     <Content Include="..\xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)" />
     <PackageReference Include="xunit" Version="$(XunitV2Version)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitRunnerVSVersion)">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
