--- a/test-explorer/v2x_net472_ReferencingProject/v2x_net472_ReferencingProject.csproj
+++ b/test-explorer/v2x_net472_ReferencingProject/v2x_net472_ReferencingProject.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)" />
     <PackageReference Include="xunit" Version="$(XunitV2Version)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitRunnerVSVersion)">
       <PrivateAssets>all</PrivateAssets>
