--- a/test-explorer/v3x_net472/v3x_net472.csproj
+++ b/test-explorer/v3x_net472/v3x_net472.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)" />
     <PackageReference Include="xunit.v3" Version="$(XunitV3Version)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitRunnerVSVersion)">
       <PrivateAssets>all</PrivateAssets>
