--- a/analyzers/.editorconfig
+++ b/analyzers/.editorconfig
@@ -79,6 +79,7 @@ dotnet_diagnostic.xUnit2025.severity = warning
 dotnet_diagnostic.xUnit2026.severity = warning
 dotnet_diagnostic.xUnit2027.severity = warning
 dotnet_diagnostic.xUnit2028.severity = warning
+dotnet_diagnostic.xUnit2029.severity = warning
 
 dotnet_diagnostic.xUnit3000.severity = warning
 dotnet_diagnostic.xUnit3001.severity = warning
