--- a/console/v2x_net472/v2x_net472.csproj
+++ b/console/v2x_net472/v2x_net472.csproj
@@ -30,7 +30,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="xunit" Version="$(XunitV2Version)" />
-    <PackageReference Include="xunit.v3.runner.console" Version="$(XunitV3Version)">
+    <PackageReference Include="xunit.runner.console" Version="$(XunitV2Version)">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
