--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,10 +2,9 @@
 
   <PropertyGroup>
     <MicrosoftNetTestSdkVersion>17.10.0</MicrosoftNetTestSdkVersion>
-    <XunitAnalyzersVersion>1.15.0</XunitAnalyzersVersion>
-    <XunitV2Version>2.9.0</XunitV2Version>
-    <XunitV3Version>0.2.0-pre.10</XunitV3Version>
-    <!--<XunitRunnerVSVersion>2.8.2</XunitRunnerVSVersion>-->
+    <XunitAnalyzersVersion>1.16.0-pre.12</XunitAnalyzersVersion>
+    <XunitV2Version>2.9.1-pre.6</XunitV2Version>
+    <XunitV3Version>0.2.0-pre.39</XunitV3Version>
     <XunitRunnerVSVersion>3.0.0-pre.11</XunitRunnerVSVersion>
   </PropertyGroup>
 
