--- a/analyzers.vs2019/.editorconfig
+++ b/analyzers.vs2019/.editorconfig
@@ -50,6 +50,7 @@ dotnet_diagnostic.xUnit1047.severity = warning
 dotnet_diagnostic.xUnit1048.severity = warning
 dotnet_diagnostic.xUnit1049.severity = warning
 dotnet_diagnostic.xUnit1050.severity = warning
+dotnet_diagnostic.xUnit1051.severity = warning
 
 dotnet_diagnostic.xUnit2000.severity = warning
 dotnet_diagnostic.xUnit2001.severity = warning
@@ -79,13 +80,17 @@ dotnet_diagnostic.xUnit2025.severity = warning
 dotnet_diagnostic.xUnit2026.severity = warning
 dotnet_diagnostic.xUnit2027.severity = warning
 dotnet_diagnostic.xUnit2028.severity = warning
+dotnet_diagnostic.xUnit2029.severity = warning
+dotnet_diagnostic.xUnit2030.severity = warning
 
 dotnet_diagnostic.xUnit3000.severity = warning
 dotnet_diagnostic.xUnit3001.severity = warning
+dotnet_diagnostic.xUnit3002.severity = warning
 
 dotnet_diagnostic.CA1050.severity = none
 dotnet_diagnostic.CA2211.severity = none
 
+dotnet_diagnostic.CS0067.severity = none
 dotnet_diagnostic.CS1998.severity = none
 dotnet_diagnostic.CS8321.severity = none
 dotnet_diagnostic.CS8604.severity = none
