--- a/console/v2x_net472_Sdk/v2x_net472_Sdk.csproj
+++ b/console/v2x_net472_Sdk/v2x_net472_Sdk.csproj
@@ -16,7 +16,7 @@
     </PackageReference>
   </ItemGroup>
 
-  <Target Name="Test" AfterTargets="Build">
+  <Target Name="XunitTest" AfterTargets="Build">
     <Exec Command="$(XunitConsolePath) &quot;$(TargetPath)&quot;" Condition=" '$(OS)' == 'Windows_NT' "/>
     <Exec Command="mono $(XunitConsolePath) &quot;$(TargetPath)&quot;" Condition=" '$(OS)' != 'Windows_NT' " />
   </Target>
