--- a/msbuild/build
+++ b/msbuild/build
@@ -1,8 +1,8 @@
 #!/usr/bin/env bash
 
-# Restore first so the xunit MSBuild task can be found
+# Restore and build first so the xunit MSBuild task can be found
 
-msbuild /t:Restore /v:minimal /nologo
+msbuild /t:"Restore;Build" /v:minimal /nologo
 
 # v2 projects require the .NET Framework version of MSBuild
 
