--- a/msbuild/v2x_net472_Sdk/v2x_net472_Sdk.csproj
+++ b/msbuild/v2x_net472_Sdk/v2x_net472_Sdk.csproj
@@ -16,7 +16,7 @@
     </PackageReference>
   </ItemGroup>
 
-  <Target Name="XunitTest" AfterTargets="Build">
+  <Target Name="XunitTest">
     <xunit Assemblies="$(TargetPath)" />
   </Target>
 
