--- a/analyzers/.editorconfig
+++ b/analyzers/.editorconfig
@@ -103,4 +103,5 @@ dotnet_diagnostic.IDE0051.severity = none
 dotnet_diagnostic.IDE0052.severity = none
 dotnet_diagnostic.IDE0060.severity = none
 dotnet_diagnostic.IDE0062.severity = none
+dotnet_diagnostic.IDE0290.severity = none
 dotnet_diagnostic.IDE1006.severity = none
