--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <MicrosoftNetTestSdkVersion>17.11.1</MicrosoftNetTestSdkVersion>
-    <XunitAnalyzersVersion>1.17.0-pre.8</XunitAnalyzersVersion>
-    <XunitV2Version>2.9.3-pre.3</XunitV2Version>
-    <XunitV3Version>0.5.0-pre.29</XunitV3Version>
-    <XunitRunnerVSVersion>3.0.0-pre.44</XunitRunnerVSVersion>
+    <XunitAnalyzersVersion>1.17.0</XunitAnalyzersVersion>
+    <XunitV2Version>2.9.3-pre.4</XunitV2Version>
+    <XunitV3Version>0.6.0-pre.7</XunitV3Version>
+    <XunitRunnerVSVersion>3.0.0-pre.49</XunitRunnerVSVersion>
   </PropertyGroup>
 
 </Project>
