--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <MicrosoftNetTestSdkVersion>17.12.0</MicrosoftNetTestSdkVersion>
-    <XunitAnalyzersVersion>1.19.0</XunitAnalyzersVersion>
+    <XunitAnalyzersVersion>1.20.0-pre.5</XunitAnalyzersVersion>
     <XunitV2Version>2.9.3</XunitV2Version>
-    <XunitV3Version>1.0.1</XunitV3Version>
-    <XunitRunnerVSVersion>3.0.1</XunitRunnerVSVersion>
+    <XunitV3Version>1.1.0-pre.3</XunitV3Version>
+    <XunitRunnerVSVersion>3.0.2-pre.6</XunitRunnerVSVersion>
   </PropertyGroup>
-
+  
 </Project>
