--- a/console/build
+++ b/console/build
@@ -8,6 +8,6 @@ msbuild /v:minimal /nologo v2x_net472/v2x_net472.csproj
 
 # We can use .NET SDK for any SDK style project
 
-dotnet build -v:minimal --nologo v2x_net472_Sdk/v2x_net472_Sdk.csproj
-dotnet build -v:minimal --nologo v3x_net472/v3x_net472.csproj
-dotnet build -v:minimal --nologo v3x_net60/v3x_net60.csproj
+dotnet build -v:minimal --nologo v2x_net472_Sdk/v2x_net472_Sdk.csproj -tl:off
+dotnet build -v:minimal --nologo v3x_net472/v3x_net472.csproj -tl:off
+dotnet build -v:minimal --nologo v3x_net60/v3x_net60.csproj -tl:off
