--- a/msbuild/build
+++ b/msbuild/build
@@ -11,5 +11,5 @@ msbuild /t:XunitTest /v:minimal /nologo v2x_net472_Sdk/v2x_net472_Sdk.csproj
 
 # v3 projects can use the .NET version of MSBuild, even for .NET Framework projects
 
-dotnet build -t:XunitTest -v:minimal --nologo v3x_net472/v3x_net472.csproj
-dotnet build -t:XunitTest -v:minimal --nologo v3x_net60/v3x_net60.csproj
+dotnet build -t:XunitTest -v:minimal --nologo v3x_net472/v3x_net472.csproj -tl:off
+dotnet build -t:XunitTest -v:minimal --nologo v3x_net60/v3x_net60.csproj -tl:off
