--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <MicrosoftNetTestSdkVersion>17.14.1</MicrosoftNetTestSdkVersion>
-    <XunitAnalyzersVersion>1.23.0-pre.7</XunitAnalyzersVersion>
+    <XunitAnalyzersVersion>1.23.0</XunitAnalyzersVersion>
     <XunitV2Version>2.9.3</XunitV2Version>
-    <XunitV3Version>3.0.0-pre.41</XunitV3Version>
-    <XunitRunnerVSVersion>3.1.1</XunitRunnerVSVersion>
+    <XunitV3Version>3.0.0</XunitV3Version>
+    <XunitRunnerVSVersion>3.1.2</XunitRunnerVSVersion>
   </PropertyGroup>
   
 </Project>
